--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,17 @@
     transform: rotate(360deg);
   }
 }
+.AppContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #161625;
+  min-height: 3788px;
+  max-width: 1920px;
+}
+
+/* @media screen and (max-width: 360px) {
+  .AppContainer {
+    max-width: 360px;
+  }
+} */
