--- a/src/App.css
+++ b/src/App.css
@@ -41,7 +41,7 @@
   flex-direction: column;
   align-items: center;
   background-color: #161625;
-  min-height: 3788px;
+  min-height: 100vh;
   max-width: 1920px;
 }
 
