--- a/src/components/About/index.css
+++ b/src/components/About/index.css
@@ -64,12 +64,12 @@
     left: 150px;
   }
 } */
-.loader-container {
-  position: absolute;
-  top: 472px;
-  bottom: 472px;
-  right: 680px;
-  left: 680px;
+.aboutRouteLoader {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  width: 100vw;
 }
 .failure-Image {
   position: absolute;
