--- a/src/components/Home/index.css
+++ b/src/components/Home/index.css
@@ -34,12 +34,14 @@ input::placeholder {
   height: 24px;
   width: 24px;
   color: #94a3b8;
+  margin-left: 20px;
 }
 .searchBar {
   width: 85%;
   border: none;
   outline: none;
   background-color: #2f2f43;
+  color: #ffffff;
 }
 /* @media screen and (max-width: 360px) {
   .searchIcon {
@@ -52,6 +54,7 @@ input::placeholder {
   display: flex;
   overflow-x: auto;
   margin-left: 24px;
+  margin-bottom: 50px;
 }
 @media screen and (min-width: 1440px) {
   .tableContainer {
@@ -193,28 +196,24 @@ input::placeholder {
 } */
 .searchStateContainer {
   height: 265px;
-  min-width: 824px;
+  width: 300px;
   position: absolute;
   top: 220px;
   list-style: none;
   padding: 0px;
   overflow-y: hidden;
 }
-/* @media screen and (max-width: 360px) {
+@media screen and (min-width: 767px) {
   .searchStateContainer {
-    height: 265px;
-    position: absolute;
-    top: 120px;
-    left: 24px;
-    right: 24px;
+    min-width: 600px;
   }
-} */
+}
 .loader-container {
-  position: absolute;
-  top: 472px;
-  bottom: 472px;
-  right: 680px;
-  left: 680px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  width: 100vw;
 }
 .failure-Image {
   position: absolute;
